@@ -678,11 +678,16 @@ proc gdb_trace_collection_test {} {
     gdb_collect_locals_test local_test_func \
 	    "locc, loci, locf, locd, locst, locar" \
 	    "auto locals individually"
-    gdb_collect_locals_test reglocal_test_func "\$locals" \
+
+    #Some registers can't be read on ARM , skip those tests
+    if { ![is_aarch32_target] } {
+	gdb_collect_locals_test reglocal_test_func "\$locals" \
 	    "register locals collectively"
-    gdb_collect_locals_test reglocal_test_func \
+	gdb_collect_locals_test reglocal_test_func \
 	    "locc, loci, locf, locd, locst, locar" \
 	    "register locals individually"
+    }
+
     gdb_collect_locals_test statlocal_test_func "\$locals" \
 	    "static locals collectively"
     gdb_collect_locals_test statlocal_test_func \
@@ -764,7 +769,10 @@ proc gdb_trace_collection_test {} {
     gdb_collect_expression_test globals_test_func \
 	    "globalarr\[\(l6, l7\)\]" "7"    "a\[\(b, c\)\]"
 
-    gdb_collect_return_test
+    #This architecture has no method to collect a return address.
+    if { ![is_aarch32_target] } {
+	gdb_collect_return_test
+    }
 
     gdb_collect_strings_test strings_test_func "locstr" "abcdef" "" \
 	    "local string"
