@@ -39,6 +39,8 @@ maint info line-table REGEXP
 
 *** Changes in GDB 7.11
 
+* Support for tracepoints on ARM linux was added in GDBServer.
+
 * GDB now supports debugging kernel-based threads on FreeBSD.
 
 * Per-inferior thread numbers
